# janus

./: .aiignore  .gitignore  .gitignore copy  .markdownlint.yaml  .pre-commit-config.yaml  .pymarkdown.json  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  JANUS_INITIALIZATION_SUMMARY.md  LICENSE-MIT  README.md  ai.md  benchmark.py  build_log.txt  cargo.toml  ci.yml  main.py  pyproject copy.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  PERFORMANCE.md  plugins.md
docs/architecture/: TECHNICAL_DEEP_DIVE.md  janus_blueprint.md
docs/governance/: CONTRIBUTING.md
docs/planning/: IDEAS.md  JANUS_INITIALIZATION_SUMMARY.md  ROADMAP.md  container_hardening.md  implementation_plan.md  implementation_plan_wayoint_3.3.md  implementation_plan_wp41_metadata.md  pandas_integration_design.md  pandas_integration_design_refined.md  phase_8_plan.md
docs/source/: conf.py  getting_started.md  index.md
docs/source/api/: index.rst  janus.plugins.rst  janus.rst
docs/source/architecture/: index.md  technical_deep_dive.md
janus/: __init__.py  base.py  containers.py  decorators.py  logger.py  options.py  persistence.py  registry.py  tachyon_rs.pyi  utils.py  viz.py  viz_mpl.py
janus/libtachyon_rs.dylib.dSYM/Contents/: Info.plist
janus/libtachyon_rs.dylib.dSYM/Contents/Resources/Relocations/x86_64/: libtachyon_rs.dylib.yml
janus/plugins/: numpy.py  pandas.py  utils.py
src/: containers.rs  engine.rs  graph.rs  lib.rs  models.rs  reconcile.rs  serde_py.rs
tests/: test_basic_revert.py  test_branch_management.py  test_diff.py  test_history_squash.py  test_integration.py  test_linear_behavior.py  test_memory_safety.py  test_merge.py  test_merge_containers.py  test_merge_strategies.py  test_multiverse.py  test_node_metadata.py  test_numpy_adapter.py  test_pandas_mvp.py  test_performance.py  test_persistence.py  test_plugins.py  test_pruning.py  test_squash.py  test_timeline_containers.py  test_timeline_search.py  test_tracked_dict_api.py  test_tracked_list_api.py  test_viz_mpl.py  test_viz_registry.py  test_vs_deepcopy.py  verify_viz.py
