[package]
name = "tachyon-rs" # The crate name
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "tachyon_rs" # The name of the .so / .pyd file
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "multiple-pymethods", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
